--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -106,5 +106,5 @@ jobs:
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: MSIX Package
+        name: Prompt-o-mat_${{ matrix.configuration }}
         path: ${{ env.Wap_Project_Directory }}\AppPackages
