--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -50,6 +50,8 @@ jobs:
         $pfx_cert_byte = [System.Convert]::FromBase64String("${{ secrets.Base64_Encoded_Pfx }}")
         $certificatePath = Join-Path -Path $env:Wap_Project_Directory -ChildPath GitHubActionsWorkflow.pfx
         [IO.File]::WriteAllBytes("$certificatePath", $pfx_cert_byte)
+        [IO.File]::Copy("$certificatePath", "./CopilotSmartCards/GitHubActionsWorkflow.pfx")
+        [IO.File]::Copy("$certificatePath", "./GitHubActionsWorkflow.pfx")
 
     # Create the app package by building and packaging the Windows Application Packaging project
     - name: Create the app package
