--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,8 +63,11 @@ jobs:
     - name: Remove the pfx
       run: Remove-Item -path $env:Wap_Project_Directory\GitHubActionsWorkflow.pfx
 
+    - name: Compress output folder
+      run: Compress-Archive -Path ${{ env.Wap_Project_Directory }}\AppPackages\* -DestinationPath Prompt-o-mat.zip
+
     - name: Create draft release
       uses: softprops/action-gh-release@v2
       with:
-        files: ${{ env.Wap_Project_Directory }}\AppPackages
+        files: Prompt-o-mat.zip
         draft: true
